--- a/config.yml
+++ b/config.yml
@@ -13,14 +13,13 @@ templates:
       showrss.info: 1 seconds
       torlock.eu: 1 seconds
       torrenticity.com: 1 seconds
-      torrentz.eu: 1 seconds
       torrentz.me: 1 seconds
       kickasstorrents.eu: 1 seconds
 
       # Discover
-      kat.ch: 1 seconds
-      torrentz.eu: 1 seconds
-      rarbg.to: 1 seconds
+      kat.ch: 5 seconds
+      torrentz.eu: 5 seconds
+      rarbg.to: 5 seconds
 
 
     regexp:
@@ -48,7 +47,6 @@ templates:
         - '*.mkv'
         - '*.m4v'
         - '*.mp4'
-#        - '*.rar'
       reject:
         - '*.m2ts'
         - 'password.txt'
@@ -60,8 +58,36 @@ templates:
 
   Series-Global:
     exists_series:
-      - /mnt/nas/Video/Serier
-      - /mnt/nas/public/Downloads/incomplete/series
+      - '{{ secrets.path.targetSeries }}'
+      - '{{ secrets.path.downloadSeries }}'
+
+    # Some titles need little corrections to find matches on metainfo sites.
+    manipulate:
+      - title:
+          replace:
+            regexp: '^\[[^\]]*\][^a-z0-9]*'
+            format: ''
+      - title:
+          replace:
+            regexp: '^{[^\]]*}[^a-z0-9]*'
+            format: ''
+      - title:
+          replace:
+            regexp: '^\([^\]]*\)[^a-z0-9]*'
+            format: ''
+      # Original title backup
+      - tvinfo_title:
+          from: title
+      # Now the modifications
+      - title:
+          replace:
+            regexp: '.*(marvel|marvels|marvel.s)?.agents.of.(s.h.i.e.l.d.|shield)[\b-.]*'
+            format: 'marvels_agents_of_shield.'
+      - title:
+          replace:
+            regexp: '^[^a-z0-9]*heartland.(ca|\(ca\))?[^a-z0-9]*'
+            format: 'Heartland.(CA).'
+
     transmission:
       host: localhost
       port: 9091
@@ -73,16 +99,13 @@ templates:
       skip_files:
         - '*.[sS]ample'
     thetvdb_lookup: yes
-    trakt_lookup:
-      account: '{{ secrets.trakt.account }}'
-      username: '{{ secrets.trakt.username }}'
     set:
       content_filename: "{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -')|replace(',', '') }} - {{ series_id }}{% if tvdb_ep_name|default(False) %} - {{ tvdb_ep_name|replace('/', '_')|replace(':', ' -')|replace(',', '') }}{% endif %} - {{ quality }}"
-      path: /mnt/nas/public/Downloads/incomplete/series
+      path: '{{ secrets.path.downloadSeries }}'
     pushbullet:
       apikey: '{{ secrets.pushbullet.APIkey }}'
       title: "[FlexGet] {{ series_name }}"
-      body: "{{task}} - {{ series_id }}\nTorrent File: {{title}}"
+      body: "{{task}} - {{ series_id }}\nFile: {{title}}"
 
   Series-Feeds:
     inputs:
@@ -133,9 +156,6 @@ templates:
       what:
         - emit_series: yes
       from:
-        #- piratebay: 
-        #    category: tv
-        #    sort_by: seeds
         - kat: 
             category: tv
             verified: yes
@@ -147,6 +167,60 @@ templates:
 #            sort_by: seeders
 #            limit: 25
 #            use_tvdb: true
+
+  Movies-Global:
+    exists_movie:
+      - '{{ secrets.path.targetMovies }}'
+      - '{{ secrets.path.downloadMovies }}'
+    content_size:
+      max: 1700
+      min: 750
+    imdb_lookup: yes
+    transmission:
+      host: localhost
+      port: 9091
+      username: '{{ secrets.transmission.username }}'
+      password: '{{ secrets.transmission.password }}'
+      magnetization_timeout: 30
+      main_file_only: yes
+      include_subs: yes
+      skip_files:
+        - '*.[sS]ample'
+    set:
+      path: '{{ secrets.path.downloadMovies }}'
+    pushbullet:
+      apikey: '{{ secrets.pushbullet.APIkey }}'
+      title: "[FlexGet] {{ imdb_name }} {{ imdb_year }}"
+      body: "{{task}}\nFile: {{title}}"
+      url: "imdb:///title/{{ imdb_id }}?src=mdot"
+
+  Movies-Discover:
+    discover:
+      what:
+        - emit_movie_queue: yes
+      from:
+        - kat:
+            category: movies
+            verified: yes
+
+  Movies-Queued:
+    movie_queue: accept
+    template: Movies-Discover
+    disable:
+      - seen_movies
+#    discover:
+#      what:
+#        - emit_movie_queue: yes
+#      from:
+#        - filler: yes
+    trakt_remove:
+      username: '{{ secrets.trakt.username }}'
+      account: '{{ secrets.trakt.account }}'
+      list: Movie Queue
+    trakt_add:
+      username: '{{ secrets.trakt.username }}'
+      account: '{{ secrets.trakt.account }}'
+      list: watchlist
 
   Sub-Move:
     move:
@@ -175,17 +249,17 @@ tasks:
         quality: 480p-720p webrip+
         propers: 12 hours
     series:
-      - "Marvel's Agents of S.H.I.E.L.D.":
-          alternate_name:
-            -  "Marvels Agents of S.H.I.E.L.D."
-            -  "Marvel's Agents of SHIELD"
-            -  "Marvels Agents of SHIELD"
-      - "Once Upon a Time":
-          exact: yes
-          alternate_name:
-            - "Once Upon a Time (2011)"
-            - "Once Upon a Time 2011"
-      - "Heartland (2007) (CA)":
+#      - "Marvel's Agents of S.H.I.E.L.D.":
+#          alternate_name:
+#            -  "Marvels Agents of S.H.I.E.L.D."
+#            -  "Marvel's Agents of SHIELD"
+#            -  "Marvels Agents of SHIELD"
+#      - "Once Upon a Time":
+#          exact: yes
+#          alternate_name:
+#            - "Once Upon a Time (2011)"
+#            - "Once Upon a Time 2011"
+      - "Heartland (2007) (CA) (2007)":
           begin: S08E01
           alternate_name:
             - "Heartland (2007) (CA)"
@@ -216,7 +290,7 @@ tasks:
     clean_transmission:
       username: '{{ secrets.transmission.username }}'
       password: '{{ secrets.transmission.password }}'
-      finished_for: 1 hours
+      enabled: yes
     disable: [details]
 
   Sort-Series:
@@ -224,14 +298,11 @@ tasks:
     template:
       - Sub-Move
     filesystem: 
-      path: /mnt/nas/public/Downloads/incomplete/series/
+      path: '{{ secrets.path.downloadSeries }}/'
       regexp: '.*\.(avi|mkv|mp4)$'
       recursive: yes
     disable: seen
     thetvdb_lookup: yes
-    trakt_lookup:
-      account: '{{ secrets.trakt.account }}'
-      username: '{{ secrets.trakt.username }}'
     metainfo_series: yes
     require_field:
       - series_season
@@ -241,12 +312,12 @@ tasks:
       reject:
         - sample
     move:
-      to: "/mnt/nas/Video/Serier/{{ series_name|replace('/', '_')|replace(':', ' ') }}/{% if series_id_type == 'ep' %}Season {{ trakt_season|default(series_season)|pad(2) }}/{% endif %}"
+      to: "/mnt/nas/Video/Serier/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' ') }}/{% if series_id_type == 'ep' %}Season {{ tvdb_season|default(series_season)|pad(2) }}/{% endif %}"
       clean_source: 50
     pushbullet:
       apikey: '{{ secrets.pushbullet.APIkey }}'
       title: "[FlexGet] {{ series_name }}"
-      body: "{{task}} - {{ series_id }}\nTorrent File: {{title}}"
+      body: "{{task}} - {{ series_id }}\nFile: {{title}}"
 
   Series-SetBegin:
     priority: 9
@@ -278,16 +349,74 @@ tasks:
       title: "[FlexGet] {{ series_name }}"
       body: "{{task}}"
 
+  Movies-SetQueue:
+    priority: 10
+    template: no_global
+    trakt_list:
+      username: '{{ secrets.trakt.username }}'
+      account: '{{ secrets.trakt.account }}'
+      list: Movie Queue
+      type: movies
+    accept_all: yes
+    movie_queue: add
+
+  Movies-Get720p:
+    priority: 11
+    template: 
+      - Movies-Global
+      - Movies-Queued
+    torrent_alive:
+      min_seeds: 5
+    quality: 720p bluray+ h264+ !mp3 !aac
+
+  Movies-Get:
+    priority: 12
+    template: 
+      - Movies-Global
+      - Movies-Queued
+    torrent_alive:
+      min_seeds: 2
+    quality: 480p-720p webrip+ !sdtv !dvdscr !bdscr
+    delay: 7 days
+
+  Sort-Movies:
+    priority: 13
+    template:
+      - Sub-Move
+    filesystem: 
+      path: '{{ secrets.path.downloadMovies }}/'
+      regexp: '.*\.(avi|mkv|mp4)$'
+      recursive: yes
+    disable: seen
+    tmdb_lookup: yes
+    imdb_lookup: yes
+    accept_all: yes
+    regexp:
+      reject:
+        - sample
+    move:
+      to: '/mnt/nas/Video/Film/{{ tmdb_name|replace("/", "_")|replace(":", " ") }} ({{ tmdb_year }})'
+      clean_source: 50
+    pushbullet:
+      apikey: '{{ secrets.pushbullet.APIkey }}'
+      title: "[FlexGet] {{ imdb_name }} {{ imdb_year }}"
+      body: "{{task}}\nFile: {{title}}"
+      url: "imdb:///title/{{ imdb_id }}?src=mdot"
+
 schedules:
-  - tasks: Series-Get*
-    interval:
-      minutes: 30
-  - tasks: Sort-Series
-    interval:
-      minutes: 15
+  - tasks: Series-GetFollowing
+    schedule:
+      hour: 0-9/1
+  - tasks: Sort-*
+    schedule:
+      hour: 0-9
+      minute: "*/60"
 #  - tasks: ClearTransmission
 #    interval:
 #      hours: 2
   - tasks: Series-SetBegin
+    interval:
+      days: 1
+  - tasks: Movies-*
     interval:
       days: 1
